--- a/bw-util-misc/pom.xml
+++ b/bw-util-misc/pom.xml
@@ -14,9 +14,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <scope>provided</scope>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
     </dependency>
   </dependencies>
 </project>
