--- a/bw-util-caching/pom.xml
+++ b/bw-util-caching/pom.xml
@@ -15,13 +15,8 @@
   <dependencies>
     <!-- Bedework -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.bedework</groupId>
-      <artifactId>bw-util-misc</artifactId>
-      <version>4.0.20-SNAPSHOT</version>
+      <artifactId>bw-util-logging</artifactId>
     </dependency>
   </dependencies>
 </project>
