--- a/bw-util-elasticsearch/pom.xml
+++ b/bw-util-elasticsearch/pom.xml
@@ -30,6 +30,11 @@
 
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
       <version>${project.version}</version>
     </dependency>
