--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 
     <!-- Bedework Versions -->
+    <bw-util-logging.version>4.0.0-SNAPSHOT</bw-util-logging.version>
     <ical4j.groupId>org.bedework.ical4j</ical4j.groupId>
     <ical4j.artifactId>ical4j</ical4j.artifactId>
     <ical4j.version>2.0.3</ical4j.version>
@@ -37,7 +38,6 @@
     <jolokia.version>1.3.1</jolokia.version>
     <jtidy.version>4aug2000r7-dev</jtidy.version>
     <junit.version>4.8.2</junit.version>
-    <log4j.version>1.2.15</log4j.version>
     <maven-plugin-annotations.version>3.4</maven-plugin-annotations.version>
     <maven-plugin-api.version>3.0</maven-plugin-api.version>
     <servlet-api.version>2.5</servlet-api.version>
@@ -127,7 +127,13 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- Bedework: Web Services -->
+      <!-- Bedework: Logging -->
+      <dependency>
+        <groupId>org.bedework</groupId>
+        <artifactId>bw-util-logging</artifactId>
+        <version>${bw-util-logging.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>${ical4j.groupId}</groupId>
         <artifactId>${ical4j.artifactId}</artifactId>
@@ -237,25 +243,6 @@
         <version>${struts.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>${log4j.version}</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>jmxtools</artifactId>
-            <groupId>com.sun.jdmk</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>jmxri</artifactId>
-            <groupId>com.sun.jmx</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>jms</artifactId>
-            <groupId>javax.jms</groupId>
-          </exclusion>
-        </exclusions>
-      </dependency>
       <!-- Test Dependencies -->
       <dependency>
         <groupId>junit</groupId>
