Bulk of these updates is to localize all references to external logging classes to one new module.
Changes are widespread (virtually every source file will be touched) but mean log4j should not be referenced anywhere except in bw-util-logging.

--- a/bw-util-cli/pom.xml
+++ b/bw-util-cli/pom.xml
@@ -13,7 +13,12 @@
     <dependency>
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
-      <version>4.0.20-SNAPSHOT</version>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
     </dependency>
 
     <dependency>
