--- a/bw-util-dav/pom.xml
+++ b/bw-util-dav/pom.xml
@@ -19,6 +19,12 @@
       <artifactId>bw-util-http</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-xml</artifactId>
