--- a/bw-util-deployment/pom.xml
+++ b/bw-util-deployment/pom.xml
@@ -28,6 +28,11 @@
 
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-xml</artifactId>
       <version>${project.version}</version>
     </dependency>
