--- a/bw-util-directory/pom.xml
+++ b/bw-util-directory/pom.xml
@@ -13,6 +13,12 @@
 
   <dependencies>
     <!-- Bedework -->
+
+    <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
