--- a/bw-util-jolokia/pom.xml
+++ b/bw-util-jolokia/pom.xml
@@ -24,6 +24,11 @@
 
     <dependency>
       <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.bedework</groupId>
       <artifactId>bw-util-misc</artifactId>
       <version>${project.version}</version>
     </dependency>
