--- a/bw-util-servlet/pom.xml
+++ b/bw-util-servlet/pom.xml
@@ -33,6 +33,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.bedework</groupId>
+      <artifactId>bw-util-logging</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
