--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 
     <!-- Bedework Versions -->
-    <bw-util-logging.version>4.0.0-SNAPSHOT</bw-util-logging.version>
+    <bw-util-logging.version>4.0.0</bw-util-logging.version>
+
     <ical4j.groupId>org.bedework.ical4j</ical4j.groupId>
     <ical4j.artifactId>ical4j</ical4j.artifactId>
     <ical4j.version>2.0.3</ical4j.version>
