--- a/bw-util-jmx/pom.xml
+++ b/bw-util-jmx/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.22-SNAPSHOT</version>
+        <version>4.0.22</version>
     </parent>
 
     <artifactId>bw-util-jmx</artifactId>
