--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <jolokia.version>1.3.1</jolokia.version>
     <jtidy.version>4aug2000r7-dev</jtidy.version>
     <junit.version>4.8.2</junit.version>
-    <servlet-api.version>2.5</servlet-api.version>
+    <servlet-api.version>4.0.0</servlet-api.version>
     <struts.version>1.3.10</struts.version>
   </properties>
 
@@ -203,7 +203,7 @@
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
+        <artifactId>javax.servlet-api</artifactId>
         <version>${servlet-api.version}</version>
         <scope>provided</scope>
       </dependency>
