--- a/bw-util-struts/pom.xml
+++ b/bw-util-struts/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.24-SNAPSHOT</version>
+    <version>4.0.24</version>
   </parent>
 
   <artifactId>bw-util-struts</artifactId>
