--- a/bw-util-cli/pom.xml
+++ b/bw-util-cli/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>4.0.25</version>
+    <version>4.0.26-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
