--- a/pom.xml
+++ b/pom.xml
@@ -288,7 +288,7 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.1.1</version>
         <configuration>
-          <additionalparam>-Xdoclint:none</additionalparam>
+          <additionalJOption>-Xdoclint:none</additionalJOption>
           <failOnError>false</failOnError>
         </configuration>
       </plugin>
@@ -350,7 +350,7 @@
               </execution>
             </executions>
             <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
+              <additionalJOption>-Xdoclint:none</additionalJOption>
               <failOnError>false</failOnError>
             </configuration>
           </plugin>
