--- a/bw-util-config/pom.xml
+++ b/bw-util-config/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bedework</groupId>
         <artifactId>bw-util</artifactId>
-        <version>4.0.26-SNAPSHOT</version>
+        <version>4.0.26</version>
     </parent>
 
     <artifactId>bw-util-config</artifactId>
