--- a/bw-util-caching/pom.xml
+++ b/bw-util-caching/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.26</version>
+    <version>4.0.27-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util-caching</artifactId>
