--- a/bw-util-json/pom.xml
+++ b/bw-util-json/pom.xml
@@ -23,4 +23,50 @@
       <artifactId>jackson-annotations</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.bedework</groupId>
+        <artifactId>bw-util-maven-deploy-wfmodule</artifactId>
+
+        <configuration>
+          <localRepository>${settings.localRepository}</localRepository>
+          <moduleName>org.bedework.util.json</moduleName>
+          <debug>true</debug>
+          <wildflyPath>${org.bedework.deployment.basedir}/wildfly</wildflyPath>
+          <jarDependencies>
+            <jarDependency>
+              <moduleName>org.bedework.com.fasterxml.jackson.core</moduleName>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-core</artifactId>
+              <version>${jackson.version}</version>
+              <type>jar</type>
+            </jarDependency>
+
+            <jarDependency>
+              <moduleName>org.bedework.com.fasterxml.jackson.core.annotations</moduleName>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-annotations</artifactId>
+              <version>${jackson.version}</version>
+              <type>jar</type>
+            </jarDependency>
+
+            <jarDependency>
+              <moduleName>org.bedework.com.fasterxml.jackson.core.databind</moduleName>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+              <version>${jackson.version}</version>
+              <type>jar</type>
+              <moduleDependencies>
+                <dependency>org.bedework.com.fasterxml.jackson.core</dependency>
+              </moduleDependencies>
+            </jarDependency>
+          </jarDependencies>
+
+          <deployModules>${org.bedework.deploy.modules}</deployModules>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
