--- a/bw-util-jms/pom.xml
+++ b/bw-util-jms/pom.xml
@@ -34,16 +34,13 @@
         <artifactId>bw-util-maven-deploy-wfmodule</artifactId>
 
         <configuration>
-          <localRepository>${settings.localRepository}</localRepository>
           <moduleName>org.bedework.util.jms</moduleName>
-          <debug>true</debug>
-          <wildflyPath>${org.bedework.deployment.basedir}/wildfly</wildflyPath>
 
           <moduleDependencies>
             <dependency>javax.jms.api</dependency>
             <dependency>org.bedework.logging</dependency>
+            <dependency>org.bedework.util.misc</dependency>
           </moduleDependencies>
-          <deployModules>${org.bedework.deploy.modules}</deployModules>
         </configuration>
       </plugin>
     </plugins>
