--- a/bw-util-jms/pom.xml
+++ b/bw-util-jms/pom.xml
@@ -24,6 +24,7 @@
     <dependency>
       <groupId>javax.jms</groupId>
       <artifactId>javax.jms-api</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
