Many changes to deployment - major change was to add "javax.api" by default

--- a/bw-util-caching/pom.xml
+++ b/bw-util-caching/pom.xml
@@ -30,7 +30,9 @@
           <moduleName>org.bedework.util.caching</moduleName>
 
           <moduleDependencies>
-            <dependency>org.bedework.logging</dependency>
+            <moduleDependency>
+              <name>org.bedework.logging</name>
+            </moduleDependency>
           </moduleDependencies>
         </configuration>
       </plugin>
