--- a/bw-util-misc/pom.xml
+++ b/bw-util-misc/pom.xml
@@ -29,7 +29,9 @@
           <moduleName>org.bedework.util.misc</moduleName>
 
           <moduleDependencies>
-            <dependency>org.bedework.logging</dependency>
+            <moduleDependency>
+              <name>org.bedework.logging</name>
+            </moduleDependency>
           </moduleDependencies>
         </configuration>
       </plugin>
