--- a/bw-util-xml/pom.xml
+++ b/bw-util-xml/pom.xml
@@ -35,8 +35,12 @@
           <moduleName>org.bedework.util.xml</moduleName>
 
           <moduleDependencies>
-            <dependency>org.bedework.util.misc</dependency>
-            <dependency>org.bedework.logging</dependency>
+            <moduleDependency>
+              <name>org.bedework.util.misc</name>
+            </moduleDependency>
+            <moduleDependency>
+              <name>org.bedework.logging</name>
+            </moduleDependency>
           </moduleDependencies>
         </configuration>
       </plugin>
