Further fixes. Ear now deploys and runs to some extent

--- a/bw-util-json/pom.xml
+++ b/bw-util-json/pom.xml
@@ -50,7 +50,10 @@
               <type>jar</type>
               <moduleDependencies>
                 <moduleDependency>
-                  <name>com.fasterxml.jackson.core</name>
+                  <name>com.fasterxml.jackson.core.jackson-core</name>
+                </moduleDependency>
+                <moduleDependency>
+                  <name>org.bedework.com.fasterxml.jackson.core.annotations</name>
                 </moduleDependency>
               </moduleDependencies>
             </jarDependency>
