Remove a bunch of (now) unnecessary dependencies from client.
Add Util.escapeJava to avoid dependency at higher level.

Move mailer classes out of engine into common.

Update Util.getObject and use in preference to CalFacadeUtil.getObject - now removed.

--- a/bw-util-misc/pom.xml
+++ b/bw-util-misc/pom.xml
@@ -17,6 +17,11 @@
       <groupId>org.bedework</groupId>
       <artifactId>bw-util-logging</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -27,6 +32,15 @@
 
         <configuration>
           <moduleName>org.bedework.util.misc</moduleName>
+
+          <jarDependencies>
+            <jarDependency>
+              <moduleName>org.bedework.org.apache.commons.commons-text</moduleName>
+              <groupId>org.apache.commons</groupId>
+              <artifactId>commons-text</artifactId>
+              <version>${commons.text.version}</version>
+            </jarDependency>
+          </jarDependencies>
 
           <moduleDependencies>
             <moduleDependency>
