--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <!-- Third Party Library Versions -->
     <commons.io.version>2.0.1</commons.io.version>
+    <commons.text.version>1.7</commons.text.version>
     <dom4j-version>1.6.1</dom4j-version>
     <jackson.version>2.10.0</jackson.version>
     <jms.version>2.0</jms.version>
@@ -112,6 +113,12 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons.io.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-text</artifactId>
+        <version>${commons.text.version}</version>
       </dependency>
 
       <dependency>
