--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,14 @@
     <maven.source.plugin.version>2.1.2</maven.source.plugin.version>
 
     <!-- Bedework Versions -->
-    <bw-util-logging.version>4.0.6</bw-util-logging.version>
+    <bw-util-logging.version>5.0.0</bw-util-logging.version>
     <bw-xml.version>4.0.10</bw-xml.version>
 
     <!-- Third Party Library Versions -->
     <commons.io.version>2.0.1</commons.io.version>
     <commons.text.version>1.7</commons.text.version>
-    <dom4j-version>1.6.1</dom4j-version>
-    <jackson.version>2.10.0</jackson.version>
+    <dom4j-version>2.1.3</dom4j-version>
+    <jackson.version>2.11.0</jackson.version>
     <jms.version>2.0</jms.version>
     <junit.version>4.13.1</junit.version>
   </properties>
@@ -121,7 +121,7 @@
       </dependency>
 
       <dependency>
-        <groupId>dom4j</groupId>
+        <groupId>org.dom4j</groupId>
         <artifactId>dom4j</artifactId>
         <version>${dom4j-version}</version>
       </dependency>
