--- a/bw-util-args/pom.xml
+++ b/bw-util-args/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.30-SNAPSHOT</version>
+    <version>4.0.30</version>
   </parent>
 
   <artifactId>bw-util-args</artifactId>
