--- a/bw-util-args/pom.xml
+++ b/bw-util-args/pom.xml
@@ -5,10 +5,9 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.32-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util-args</artifactId>
-
-  <packaging>jar</packaging>
+  <name>Bedework: util to handle cli arguments</name>
 </project>
