--- a/bw-util-caching/pom.xml
+++ b/bw-util-caching/pom.xml
@@ -5,12 +5,11 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.32-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>bw-util-caching</artifactId>
-
-  <packaging>jar</packaging>
+  <name>Bedework: util to handle caching</name>
 
   <dependencies>
     <!-- Bedework -->
