--- a/bw-util-directory/pom.xml
+++ b/bw-util-directory/pom.xml
@@ -3,13 +3,12 @@
   <parent>
     <groupId>org.bedework</groupId>
     <artifactId>bw-util</artifactId>
-    <version>4.0.32-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>bw-util-directory</artifactId>
-
-  <packaging>jar</packaging>
+  <name>Bedework: util to handle ldap directories</name>
 
   <dependencies>
     <!-- Bedework -->
