--- a/bw-util-xmltools/pom.xml
+++ b/bw-util-xmltools/pom.xml
@@ -3,11 +3,12 @@
   <parent>
     <artifactId>bw-util</artifactId>
     <groupId>org.bedework</groupId>
-    <version>4.0.32-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>bw-util-xmltools</artifactId>
+  <name>Bedework: xml tools</name>
 
   <dependencies>
     <dependency>
@@ -35,7 +36,6 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>${commons.io.version}</version>
     </dependency>
 
     <dependency>
